REST API кредитного банка
